FIxed navbar going off screen Minor changes

--- a/styles.css
+++ b/styles.css
@@ -5,16 +5,21 @@ värit
 #282633 musta
 */
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
+    padding: 0;
+    margin: 0;
     background-color: #F5F5F5;
-    width: 100%;
-    height: 100%;
+    overflow-x: hidden;
 }
 
 .navigationBar {
     padding: 15px;
     height: 30px;
-    width: 100vw;
+    max-width: 100vw;
     background-color: #1C3257;
     border-radius: 5px;
     position: relative;
@@ -24,22 +29,18 @@ body {
     justify-content: end;
 }
 
-.navigationBar > links {
+.navigationBar>links {
     width: fit-content;
 }
 
-img {
+.hero {
+    opacity: 0.8;
     position: relative;
     max-width: 100%;
     width: 100%;
     height: auto;
     max-height: 700px;
-    display: block;
-    float: left;
-    margin-left: auto;
-    margin-right: auto;
     z-index: 0;
-    top: -10px;
 }
 
 .textBox {
@@ -47,6 +48,7 @@ img {
     margin: auto;
     color: #282633;
     font-family: 'Lato';
+    font-weight: bold;
     max-height: 300px;
     max-width: 500px;
     height: 300px;
@@ -83,6 +85,10 @@ img {
     z-index: 10;
 }
 
+img {
+    width: 100%;
+}
+
 .row {
     display: flex;
     flex-wrap: wrap;
@@ -90,8 +96,8 @@ img {
 }
 
 .column {
-    flex: 24%;
-    max-width: 24%;
+    flex: 24.4%;
+    max-width: 24.4%;
     padding: 0 4px;
     min-width: 20%;
 }
